--- a/pages/templates/header.html
+++ b/pages/templates/header.html
@@ -1,37 +1,36 @@
 <nav>
     <ul>
-        <li><a href="../index.php">home</a></li>
+        <li><a href="../index.html">home</a></li>
         <li class="dropdown-nav-li">
             about us<i class="fa fa-angle-down"></i>
             <ul>
-                <li><a href="./aims.php">Aims & Objectives</a></li>
-                <li><a href="./constitution.php">Our Constitution</a></li>
-                <li><a href="">Director Message</a></li>
-                <li><a href="">School Managing Committee</a></li>
+                <li><a href="./aims.html">Aims & Objectives</a></li>
+                <li><a href="./constitution.html">Our Constitution</a></li>
+                <li><a href="./director-msg.html">Director Message</a></li>
+                <li><a href="../downloads/nav-downloads/SMC.pdf">School Managing Committee</a></li>
             </ul>
         </li>
         <li class="dropdown-nav-li">
             school info<i class="fa fa-angle-down"></i>
             <ul>
-                <li><a href="">school profile</a></li>
-                <li><a href="">affidavit/declaration</a></li>
-                <li><a href="">school advisory board</a></li>
+                <li><a href="../downloads/nav-downloads/SchoolInfo.pdf">school profile</a></li>
+                <li><a href="../downloads/nav-downloads/Affidavit.pdf">affidavit/declaration</a></li>
             </ul>
         </li>
         <li class="dropdown-nav-li">
             academics<i class="fa fa-angle-down"></i>
             <ul>
-                <li><a href="">academic calender</a></li>
-                <li><a href="">teachers list</a></li>
+                <li><a href="../downloads/nav-downloads/Academic Calender.pdf">academic calender</a></li>
+                <li><a href="../downloads/nav-downloads/Teachers List.pdf">teachers list</a></li>
                 <li><a href="">book list</a></li>
-                <li><a href="">academic achievements</a></li>
+                <li><a href="../downloads/nav-downloads/RESULTANAL.pdf">academic achievements</a></li>
                 <li><a href="">code of conduct for students</a></li>
                 <li><a href="">advice to parents</a></li>
-                <li><a href="">activities&competitions</a></li>
-                <li><a href="">annual sports meet</a></li>
-                <li><a href="">exam schedule</a></li>
-                <li><a href="">school uniform</a></li>
-                <li><a href="">holiday list</a></li>
+                <li><a href="../downloads/nav-downloads/Activities and Competitions.pdf">activities&competitions</a></li>
+                <li><a href="../downloads/nav-downloads/Annual Sports Meet.pdf">annual sports meet</a></li>
+                <li><a href="../downloads/nav-downloads/Exam Schedule.pdf">exam schedule</a></li>
+                <li><a href="../downloads/nav-downloads/School Uniform.pdf">school uniform</a></li>
+                <li><a href="../downloads/nav-downloads/Holiday List.pdf">holiday list</a></li>
             </ul>
         </li>
         <li class="dropdown-nav-li">
@@ -56,7 +55,7 @@
     </ul>
 </nav>
 <header>
-    <a href="../index.php"><figure></figure></a>
+    <a href="../index.html"><figure></figure></a>
     <div class="menu-btn"><i id="menu-ico" class="fa-solid fa-bars"></i></div>
     <ul>
         <li><a href="" class="col-change"><i class="fa fa-graduation-cap"></i>Registration for Class XI 2022-2023</a></li>
