--- a/pages/templates/footer.html
+++ b/pages/templates/footer.html
@@ -11,11 +11,11 @@
             <h2>QUICK LINKS</h2>
             <div class="content">
                 <ul>
-                    <li>About Us</li>
-                    <li>Facility</li>
-                    <li>Admission</li>
-                    <li>Admission Enquiry</li>
-                    <li>Contact Us</li>
+                    <li><a href='./aims.html'>About Us</a></li>
+                    <li><a href=''>Facility</a></li>
+                    <li><a href='../downloads/nav-downloads/Exam Schedule.pdf'>Exam Schedule</a></li>
+                    <li><a href=''>Admission Enquiry</a></li>
+                    <li><a href=''>Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -23,8 +23,8 @@
             <h2>GALLERY</h2>
             <div class="content">
                 <ul>
-                    <li>Photo Gallery</li>
-                    <li>Video Gallery</li>
+                    <li><a href=''>Photo Gallery</a></li>
+                    <li><a href=''>Video Gallery</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +55,7 @@
                     </li>
                     <li>
                         <label for="email">Email: </label>
-                        <p name='email'>bdpschool@rediffmail.com</p>
+                        <p name='email'><a href='mailto:bdpschool@rediffmail.com'>bdpschool@rediffmail.com</a></p>
                         <br>
                     </li>
                 </ul>
