--- a/pages/templates/header.html
+++ b/pages/templates/header.html
@@ -25,7 +25,7 @@
                 <li><a href="">book list</a></li>
                 <li><a href="../downloads/nav-downloads/RESULTANAL.pdf">academic achievements</a></li>
                 <li><a href="">code of conduct for students</a></li>
-                <li><a href="">advice to parents</a></li>
+                <li><a href="./advice-to-parents.html">advice to parents</a></li>
                 <li><a href="../downloads/nav-downloads/Activities and Competitions.pdf">activities&competitions</a></li>
                 <li><a href="../downloads/nav-downloads/Annual Sports Meet.pdf">annual sports meet</a></li>
                 <li><a href="../downloads/nav-downloads/Exam Schedule.pdf">exam schedule</a></li>
